lots of stuff on gui, scrolling horizontally is not working