@@ -8,7 +8,7 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
-    id 'org.openjfx.javafxplugin' version '0.1.0'
+    id 'org.openjfx.javafxplugin' version '0.0.14'
 }
 
 repositories {
@@ -41,6 +41,10 @@ java {
 application {
     // Define the main class for the application.
     mainClass = 'sequencer.project.App'
+    applicationDefaultJvmArgs = [
+        '--module-path', configurations.runtimeClasspath.asPath,
+        '--add-modules', 'javafx.controls,javafx.fxml,javafx.media'
+    ]
 }
 
 tasks.named('test') {
